manifests/sakabas_api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakabas-api
  labels:
    name: sakabas-api
