manifests/sakabas_api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sakabas-api
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: api
        image: "us-central1-docker.pkg.dev/hello-world-352201/sakabas-api/sakabas-api:latest"
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "0.015"
            memory: "100Mi"
          limits:
            cpu: "0.03"
            memory: "100Mi"
