manifests/sakabas_api/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sakabas
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: api
        image: "us-central1-docker.pkg.dev/hello-world-352201/sakabas-api/sakabas-api:latest"
        imagePullPolicy: "Always"
