manifests/sakabas_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sakabas-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
