manifests/sakabas_api/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sakabas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
