manifests/sakabas_api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: sakabas-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "api-lb-ip"
    networking.gke.io/managed-certificates: "api-cert"
spec:
  rules:
    - host: "api.sakabas.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
